--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
         <div class="flex">
             <div class="flex-col-3">
                 <picture>
-                    <img src="me.jpg" width="230">
+                    <img src="me.png" width="230">
                 </picture>
-                
-
             </div>
             <div class="flex-col-6">
                 <section>
@@ -88,8 +86,6 @@
                         <li>Risk management</li>
                         <li>Requirements management</li>
                     </ul>
-                        
-
                     </p>   
                 </div>
             </div>
@@ -282,7 +278,6 @@
         <figure class="section-center">
             <img src="qr.png">
         </figure>
-
     </section>
 </body>
 </html>
