--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="flex-col-2">
                     <h3 class="color-red">2011 - 2014</h3>
                 </div>
-                <div>
+                <div class="flex-col-10">
                     <h3 class="text-regular">Head of Development</h3>
                     <h4 class="color-red">Bridge-of-Love.com</h4>
                     <p class="color-grey">
@@ -105,7 +105,7 @@
                 <div class="flex-col-2">
                     <h3 class="color-red">2010 - 2011</h3>
                 </div>
-                <div>
+                <div class="flex-col-10">
                     <h3 class="text-regular">Project Manager</h3>
                     <h4 class="color-red">Ki-inform</h4>
                     <p class="color-grey">
