UPD: mobile mvp

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="My CV" />
         <meta name="author" content="Maxim Tudoi" />
-        <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"> -->
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
-        <!--<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600" rel="stylesheet">  -->               
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">               
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,12 +16,12 @@
 <body>
     <section class="page">
         <div class="flex">
-            <div class="flex-col-3">
+            <div class="flex-col-3 col-xs-12">
                 <picture>
                     <img src="me.png" width="230">
                 </picture>
             </div>
-            <div class="flex-col-6">
+            <div class="flex-col-6 col-xs-12"> 
                 <section>
                 <div class="name">
                         <h1>
@@ -47,7 +45,7 @@
                                                  
                  </section>
             </div>
-            <div class="flex-col-3">
+            <div class="flex-col-3 col-xs-12">
                 <div class="personal-info">
                     <label class="color-red">Location</label>
                     <address>
@@ -68,44 +66,59 @@
         <section>
             <h2 class="">Employment</h2>
             <div class="flex employment-section">
-                <div class="flex-col-2">
+                <div class="flex-col-2 col-xs-12">
                     <h3 class="color-red">2014 - Now</h3>
                 </div>
-                <div class="flex-col-10">
+                <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Project Manager of Developers team</h3>
                     <h4 class="color-red">Template Monster</h4>
                     <p class="color-grey">
-                        One of the biggest marketplace for selling web templates. My team created one of the most functional WordPress framework - CherryFramework. My key responsibilities are:
+                        One of the biggest marketplace for selling web templates. My team created one of the most functional WordPress framework - CherryFramework. My key responsibilities were:
                     <ul>
-                        <li>Business requirements analyze</li>
-                        <li>Technical specification of product</li>
-                        <li>Base marketing researchment</li>
-                        <li>Scrum master</li>
-                        <li>Sustem analyst</li>
-                        <li>Analyse of customer business needs</li>
-                        <li>Risk management</li>
+                        <li>Outline clearly stakeholders’ impact and their outlook on the project and teams</li>
+                        <li>Business and resource requirements and goals analyze</li>
+                        <li>System analysis for industry leading quality and technology standards</li>
                         <li>Requirements management</li>
+                        <li>Development of the project technical specification</li>
+                        <li>Create and Estimate work plan for the project from start to finish</li>
+                        <li>Manage project / product development and delivery</li>
+                        <li>Coordinate the activities and motivate the team involved  to the project development in order to deliver projects according to the plan</li>
+                        <li>Scrum master</li>
+                        <li>Risk and requirements management, related conflicts and issues up to resolution</li>
+                        <li>Monitor product implementation and acceptance on the stakeholder's side</li>
                     </ul>
                     </p>   
                 </div>
             </div>
             <div class="flex employment-section">
-                <div class="flex-col-2">
+                <div class="flex-col-2 col-xs-12">
                     <h3 class="color-red">2011 - 2014</h3>
                 </div>
-                <div class="flex-col-10">
+                <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Head of Development</h3>
                     <h4 class="color-red">Bridge-of-Love.com</h4>
                     <p class="color-grey">
-                        Large successful dating service project. I headed the department of design and development. Was engaged in designing of business processes, UI designing, designing databases for accompanying projects and mobile applications.   
-                    </p>   
+                        Large successful dating service project. I headed the department of design and development. Was engaged in designing of business processes, UI designing, designing databases for accompanying projects and mobile applications. My key responsibilities were:  
+                    </p> 
+                    <ul>
+                        <li>System analysis for industry leading quality and technology standards</li>
+                        <li>Requirements management</li>
+                        <li>Business and resource requirements analyze</li>
+                        <li>Define the project’s objectives and oversee quality control throughout its life cycle</li>
+                        <li>Manage and motivate the team involved to the project development</li>
+                        <li>Technical specification of the product</li>
+                        <li>Base marketing research</li>
+                        <li>Create work plan for the project, and manage his development and delivery</li>
+                        <li>Analysis of issues within Customer’s conception. Create improvement methods and appropriate solution options</li>
+                    </ul>
+
                 </div>
             </div>
             <div class="flex employment-section">
-                <div class="flex-col-2">
+                <div class="flex-col-2 col-xs-12">
                     <h3 class="color-red">2010 - 2011</h3>
                 </div>
-                <div class="flex-col-10">
+                <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Project Manager</h3>
                     <h4 class="color-red">Ki-inform</h4>
                     <p class="color-grey">
@@ -114,6 +127,11 @@
                         created the program and design solutions for such companies 
                         as telenok.com.ua, mitsubishi.nikolaev.ua, lime.ua.   
                     </p>   
+                    <ul>
+                        <li>Analysis of customer business needs for ensure that project meet expectations</li>
+                        <li>Was a primary point of contact for clients during the delivery phase of their projects</li>
+                        <li>Plan, execute, and finalize projects according to agreed deadlines and within budget</li>                        
+                    </ul>
                 </div>
             </div> 
         </section>
@@ -121,7 +139,7 @@
         <section class="">
             <h2 class="">Professional Skills</h2> 
             <div class="flex padding-bottom-3">
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <ul>
                         <li>Project Management</li>     
 
@@ -132,18 +150,20 @@
                         <li>SDLC methodology</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <ul>
                         <li>Time & Material</li>     
 
                         <li>ITIL</li>     
 
-                        <li>PMBoK</li>     
+                        <li>PMI (PMBoK)</li>     
     
                         <li>Scrum</li>
+
+                        <li>Gantt</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <ul>
                         <li>Business Analyst</li>     
 
@@ -154,7 +174,7 @@
                         <li>Continuous Delivery</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <ul>
                         <li>Business Requirements Document</li>     
                         <li>Functional Specifications Documents</li>     
@@ -166,7 +186,7 @@
         <section class="tech_stack">
             <h2 class="">Technologies & Tools Stack</h2> 
             <div class="flex padding-bottom-3">
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>Project Management</h3>
                     <ul>
                         <li>Jira</li>
@@ -174,7 +194,7 @@
                         <li>Redmine</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>Design Principles</h3>
                     <ul>
                         <li>REST API</li>
@@ -182,41 +202,47 @@
                         <li>Patterns (Sigletone, MVC)</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>SQL</h3>
                     <ul>
                         <li>NoSQL</li>
                         <li>MySQL</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>PHP</h3>
                     <ul>
                         <li>PHP7</li>
+                        <li>AJAX</li>
                     </ul>
                 </div>
             </div>
             <div class="flex padding-bottom-3">
-                <div class="flex-col-3">
-                    <h3>HTML</h3>
+                <div class="flex-col-3 col-xs-12">
+                    <h3>Design</h3>
+                    <ul>
+                        <li>Photoshop</li>
+                        <li>AXURE</li>
+                    </ul>
                 </div>
-                <div class="flex-col-3">
-                    <h3>CSS</h3>
+                <div class="flex-col-3 col-xs-12">
+                    <h3>HTML & CSS</h3>
                     <ul>
                         <li>SASS</li>
                         <li>LESS</li>
                         <li>Bootstrap</li>
                     </ul> 
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>JavaScript</h3>
                     <ul>
                         <li>Node JS</li>
                         <li>React</li>
                         <li>Gulp</li>
+                        <li>jQuery</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>Versions control</h3>
                     <ul>
                         <li>GitHub</li>
@@ -225,25 +251,30 @@
                 </div>
             </div>
             <div class="flex padding-bottom-3">
-                <div class="flex-col-3">
-                    <h3>IDE</h3>
+                <div class="flex-col-3 col-xs-12">
+                    <h3>IDE & Design</h3>
                     <ul>
                         <li>SublimeText</li>
                         <li>Atom</li>
+                        <li>Axure</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>CMS</h3>
                     <ul>
                         <li>WordPress</li>
                         <li>Bitrix</li>
                     </ul>
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>SEO</h3>
+                    <ul>
+                        <li>Semantic</li>
+                        <li>GPI Metrix</li>
+                    </ul>
 
                 </div>
-                <div class="flex-col-3">
+                <div class="flex-col-3 col-xs-12">
                     <h3>Business Analytic</h3>
                     <ul>
                         <li>BPMN 2.0</li>
@@ -256,20 +287,20 @@
         <section>
             <h2 class="">Education</h2>
             <div class="flex employment-section">
-                <div class="flex-col-2">
+                <div class="flex-col-2 col-xs-12">
                     <h3 class="color-red">2004 - 2010</h3>
                 </div>
-                <div class="flex-col-10">
+                <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Information management system and technology engineer</h3>
                     <h4 class="color-red">National University of Shipbuilding</h4> 
                     </p>   
                 </div>
             </div>
             <div class="flex employment-section">
-                <div class="flex-col-2">
+                <div class="flex-col-2 col-xs-12">
                     <h3 class="color-red">2009 - 2011</h3>
                 </div>
-                <div class="flex-col-10">
+                <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Project management master</h3>
                     <h4 class="color-red">National University of Shipbuilding</h4>  
                 </div>
