--- a/index.html
+++ b/index.html
@@ -67,7 +67,32 @@
             <h2 class="">Employment</h2>
             <div class="flex employment-section">
                 <div class="flex-col-2 col-xs-12">
-                    <h3 class="color-red">2014 - Now</h3>
+                    <h3 class="color-red">2017 - Now</h3>
+                </div>
+                <div class="flex-col-10 col-xs-12">
+                    <h3 class="text-regular">Engineering Project Manager</h3>
+                    <h4 class="color-red">Global Logic</h4>
+                    <p class="color-grey">
+                        Digital Product Engineering Services company and is headquartered in San Jose, California. GlobalLogic provides software product development services, including experience design, complex systems engineering, content engineering, and self-contained engineering labs. My key responsibilities are:  
+                    </p> 
+                    <ul>
+                        <li>Manage project / product development and delivery</li>
+                        <li>Requirements definition and clarification, backlog management</li>
+                        <li>Managing releases for Public Safety project</li>
+                        <li>Manage risks and resolves issues that affect release scope, schedule, and quality</li>
+                        <li>Manage relationships and coordinate work between different teams at different locations</li>
+                        <li>Performance assessment: responsible for reviews, appraisals, compensation management</li>
+                        <li>ML practice local coordination</li>
+                        <li>Project financial management</li>
+                        <li>Establishing project process, measurement and collaboration frameworks</li>
+                        <li>Process modeling, diagramming and prototyping, writing scenarios / use cases / Software Requirements Specification</li>
+                        <li>Requirements elicitation and analysis, documents and business rules analysis</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex employment-section">
+                <div class="flex-col-2 col-xs-12">
+                    <h3 class="color-red">2014 - 2017</h3>
                 </div>
                 <div class="flex-col-10 col-xs-12">
                     <h3 class="text-regular">Project Manager of Developers team</h3>
